--- a/2-alx_capstone_project/index.html
+++ b/2-alx_capstone_project/index.html
@@ -49,15 +49,15 @@
         </div>
     </section>
 
-    <!-- About -->
-    <section class="about" id="skills">
-        <div class="about-text">
+    <!-- Skills -->
+    <section class="skills" id="skills">
+        <div class="skills-text">
             <!-- Tag image -->
-            <div class="about-img">
+            <div class="skills-img">
                 <img src="assets/icon-responsive-custom-web-design-services-company.jpg">
             </div>
 
-            <div id="about-text">
+            <div id="skills-text">
                 <pre>A <span>Frontend</span> Web Developer</pre>
                 <div class="exp-area">
                     <p class="exp">
@@ -70,7 +70,6 @@
                 <!-- Link to my github repositories -->
                 <a href="https://github.com/Dydex?tab=repositories" type="submit" class="btn">View All Projects</a>
             </div>
-
         </div>
     </section>
 
@@ -84,29 +83,27 @@
             <div class="row">
                 <div class="box">
                     <!-- Video of my project -->
-                    <video class="clip"
-                        src="assets/Javascript Play Video on Mouse Hover and Pause on Mouseout  _ Video Gallery.mp4"
-                        type="video/mp4" loop muted>
+                    <video class="clip" src="assets/Untitled ‑ Made with FlexClip (2).mp4" type="video/mp4" loop muted>
                     </video>
                 </div>
                 <div class="main-row">
                     <div class="row-text">
-                        <h5>Website Design</h5>
+                        <h5>Website App</h5>
                     </div>
                     <div class="row-icon">
-                        <!-- github icon  -->
-                        <i class="fa-brands fa-github"></i>
+                        <a href="https://github.com/Dydex/alx_capstone_project/tree/main/0-alx_capstone_project">
+                            <!-- github icon  -->
+                            <i class="fa-brands fa-github"></i>
+                        </a>
                     </div>
                 </div>
-                <h4>Website Development for a Smile School Tutorial</h4>
+                <h4>Website development for a Task Manager</h4>
             </div>
 
             <div class="row">
                 <div class="box">
                     <!-- Video of my project -->
-                    <video class="clip"
-                        src="assets/Javascript Play Video on Mouse Hover and Pause on Mouseout  _ Video Gallery.mp4"
-                        type="video/mp4" loop muted>
+                    <video class="clip" src="assets/Untitled ‑ Made with FlexClip.mp4" type="video/mp4" loop muted>
                     </video>
                 </div>
                 <div class="main-row">
@@ -114,11 +111,13 @@
                         <h5>Website Design</h5>
                     </div>
                     <div class="row-icon">
-                        <!-- github icon  -->
-                        <i class="fa-brands fa-github"></i>
+                        <a href="https://github.com/Dydex/headphones">
+                            <!-- github icon  -->
+                            <i class="fa-brands fa-github"></i>
+                        </a>
                     </div>
                 </div>
-                <h4>Website Development for a Headphone site</h4>
+                <h4>Website Development for a Headphone Company</h4>
             </div>
 
             <div class="row">
@@ -129,8 +128,10 @@
                         <h5>Website App</h5>
                     </div>
                     <div class="row-icon">
-                        <!-- github icon  -->
-                        <i class="fa-brands fa-github"></i>
+                        <a href="https://github.com/Dydex/alx_capstone_project/tree/main/1-alx_capstone_project">
+                            <!-- github icon  -->
+                            <i class="fa-brands fa-github"></i>
+                        </a>
                     </div>
                 </div>
                 <h4>Website Development for a Note pad</h4>
@@ -139,21 +140,21 @@
             <div class="row">
                 <div class="box">
                     <!-- Video of my project -->
-                    <video class="clip"
-                        src="assets/Javascript Play Video on Mouse Hover and Pause on Mouseout  _ Video Gallery.mp4"
-                        type="video/mp4" loop muted>
+                    <video class="clip" src="assets/Untitled ‑ Made with FlexClip (1).mp4" type="video/mp4" loop muted>
                     </video>
                 </div>
                 <div class="main-row">
                     <div class="row-text">
-                        <h5>Website App</h5>
+                        <h5>Website Design</h5>
                     </div>
                     <div class="row-icon">
-                        <!-- github icon  -->
-                        <i class="fa-brands fa-github"></i>
+                        <a href="https://github.com/Dydex/alx_html_css/tree/main/css_advanced">
+                            <!-- github icon  -->
+                            <i class="fa-brands fa-github"></i>
+                        </a>
                     </div>
                 </div>
-                <h4>Website development for a Task Manager</h4>
+                <h4>Website development for a Smile School Tutorial</h4>
             </div>
         </div>
     </section>
@@ -178,7 +179,7 @@
 
     <div class="footer">
         <div class="copyright">
-            <p>2023 Dolapo Ajala, All Rights Reserved.</p>
+            <p>&copy; 2023 Dolapo Ajala, All Rights Reserved.</p>
         </div>
 
         <a href="#aboutme" class="scroll-top">
