--- a/1-alx_capstone_project/0-index.html
+++ b/1-alx_capstone_project/0-index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="notes" id="app">
         <div class="notes_sidebar">
-            <button class="notes_add" type="button">Add Note</button>
+            <button class="notes_add" type="button">Add Note for me</button>
             <div class="notes_list"></div>
             <div class="notes_list-item notes_list-item-selected">
                 <div class="notes_small-title">lecture Notes</div>
